# charter

./: .dockerignore  .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CHANGELOG.md  CONTEXT.md  Charter-黑客松项目文档.md  Dockerfile  LICENSE  PRODUCT.md  PRODUCT.zh.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  fly.toml  pyproject.toml  walkthrough.html
.github/workflows/: ci.yml  deploy.yml
benchmarks/: __init__.py  _factories.py  conftest.py  test_chain_verify.py  test_fetch_verify.py  test_grader_latency.py  test_jwks_cache.py  test_transparency_growth.py
charter/: __init__.py  _logging.py  chain.py  cli.py  constants.py  discovery.py  errors.py  grants.py  inspector.py  keys.py  loopback.py  mcp_server.py  observability.py  pins.py  privacy.py  projection.py  prompts.py  propose.py  revocation.py  schema.py  server.py  signing.py  storage.py  transparency.py
charter/adapters/: __init__.py  _rfc9421.py  ap2.py  openai_agents.py  web_bot_auth.py
charter/adapters/postgres/: __init__.py  gate.py  intent.py  proxy.py
charter/static/inspector/: inspector.css  inspector.js
charter/templates/: error.html  inspect.html
conformance/: README.md  SPEC.md
conformance/generators/: build_vectors.py
conformance/runners/javascript/: package.json  run.mjs
conformance/runners/python/: run.py
conformance/runners/rust/: Cargo.toml
conformance/runners/rust/src/: main.rs
conformance/vectors/: generation_metadata.json
conformance/vectors/aggregate/: aggregate_01_single_allow.json  aggregate_02_needs_approval_beats_allow.json  aggregate_03_incompatible_beats_both.json  aggregate_04_all-same.json  aggregate_05_zero-match_closed-world_fallback.json  aggregate_06_all-allow.json  aggregate_07_incompatible_wins_regardless_of_order.json  type_to_decision_approval_required.json  type_to_decision_data_handling.json  type_to_decision_operational_limit.json  type_to_decision_out_of_scope.json  type_to_decision_scope.json  type_to_decision_style.json
conformance/vectors/chain/: chain_rejects_relaxed_out_of_scope.json  chain_rejects_widened_scope.json  chain_rejects_wrong_parent_id.json  chain_superstring_out_of_scope.json  chain_valid_attenuation.json
conformance/vectors/jwks/: jwk_derivation_minimal.json  kid_derivation_stable.json  pin_fingerprint.json
conformance/vectors/lifecycle/: lifecycle_active.json  lifecycle_expired.json  lifecycle_revoked.json  lifecycle_superseded.json
conformance/vectors/privacy/: plaintext_never_in_canonical_bytes.json  redact_clause_roundtrip.json  verify_disclosure_tampered_value.json  verify_disclosure_valid.json
conformance/vectors/sign/: canonical_bytes_clause_edit_changes_hash.json  canonical_bytes_elides_private_fields_none.json  canonical_bytes_excludes_log_id.json  canonical_bytes_minimal.json  sign_roundtrip_deterministic.json
conformance/vectors/transparency/: log_empty.json  log_tampered_entry_body.json  log_tampered_prev_hash.json  log_valid_chain.json
conformance/vectors/verify/: verify_reject_non_ed25519_prefix.json  verify_tampered_clause.json  verify_tampered_lifecycle.json  verify_tampered_principal.json  verify_valid_signature.json  verify_wrong_public_key.json
docs/: CODEX_SETUP.md  architecture.md  decisions.md  design.md  feature-log.md  observability.md  performance.md  spec.md  style-guide.md  tech-stack.md  threat-model.md
docs/cookbook/: 01-write-charter-for-accountant.md  02-chain-with-budget.md  03-revoke-without-breaking-inflight.md  04-integrate-stripe.md  05-integrate-openai-agents-sdk.md  06-integrate-anthropic-sdk.md  07-profile-yaml-best-practices.md  08-self-host-well-known.md  09-deploy-jwks.md  10-audit-transparency-log.md  README.md
docs/legacy/: hackathon-design.md
examples/: ap2_charter_demo.py  openai_agents_demo.py  web_bot_auth_middleware.py
examples/cookbook/01-write-charter-for-accountant/: main.py  profile.yaml
examples/cookbook/02-chain-with-budget/: main.py
examples/cookbook/03-revoke-without-breaking-inflight/: main.py
examples/cookbook/04-integrate-stripe/: main.py
examples/cookbook/05-integrate-openai-agents-sdk/: main.py
examples/cookbook/06-integrate-anthropic-sdk/: main.py
examples/cookbook/07-profile-yaml-best-practices/: main.py  profile-bad.yaml  profile-good.yaml
examples/cookbook/08-self-host-well-known/: main.py
examples/cookbook/09-deploy-jwks/: main.py
examples/cookbook/10-audit-transparency-log/: main.py
examples/postgres_gated_proxy/: README.md  run_proxy.py
js/: .npmignore  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
js/src/: aggregate.ts  canonical.ts  chain.ts  constants.ts  index.ts  jwks.ts  lifecycle.ts  pins.ts  privacy.ts  schema.ts  signing.ts  transparency.ts
js/tests/unit/: aggregate.test.ts  canonical.test.ts  chain.test.ts  fixtures.ts  index.test.ts  jwks.test.ts  lifecycle.test.ts  pins.test.ts  privacy.test.ts  schema.test.ts  signing.test.ts  transparency.test.ts
profiles/: acme_assistant.yaml  acme_corp.yaml  alice.yaml  bob.yaml
scripts/: demo_chain.py  seed_demo.py
tests/: test_aggregate_chain.py  test_audit_cli.py  test_chain.py  test_cli.py  test_conformance.py  test_demo_chain.py  test_discovery.py  test_errors.py  test_fetch_chain.py  test_grants.py  test_inspector.py  test_jwks.py  test_jwks_client.py  test_logging.py  test_loopback.py  test_observability.py  test_pins.py  test_privacy.py  test_propose.py  test_revocation_propagation.py  test_server.py  test_signing_encryption.py  test_smoke.py  test_stepup_endpoint.py  test_transparency.py  test_transparency_endpoints.py
tests/adapters/: test_ap2.py  test_openai_agents.py  test_postgres_intent.py  test_postgres_proxy.py  test_web_bot_auth.py
tests/adversarial/: __init__.py  conftest.py  test_chain_attenuation_bypass.py  test_confidence_manipulation.py  test_crypto_attacks.py  test_prompt_injection_clause.py  test_prompt_injection_task.py
