[project]
name = "charter"
version = "0.1.0"
description = "Charter — agent 经济的雇佣合同（v0 demo, hackathon weekend 2026-05-17）"
requires-python = ">=3.12"
authors = [{ name = "Henry Ma" }]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "cryptography>=43.0",
    "anthropic>=0.40",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
charter = "charter.cli:main"
charter-mcp = "charter.mcp_server:run"
charter-server = "charter.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["charter"]
