[package]
name = "charter-conformance-runner"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Rust skeleton runner for the Charter conformance suite. Proves the vector format is implementable in Rust; full coverage waits for a future Rust SDK."
license = "Apache-2.0"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
walkdir = "2.5"
